# Inkfeed-app

./: .dockerignore  .gitignore  Dockerfile  LICENSE  NOTICE  README.md  config.toml  docker-compose.yml  pyproject.toml
inkfeed/: __main__.py  config.py  main.py
inkfeed/archiver/: base.py  hackernews.py  kaginews.py  rss.py
inkfeed/assets/fonts/: LICENSE.txt
inkfeed/templates/: __init__.py  base.html  hn_story.html  html_article.html  html_index.html  kagi_story.html  main_index.html  rss_story.html  sleepscreen_base.html  sleepscreen_headlines.html  sleepscreen_spotlight.html  sleepscreen_title.html
inkfeed/utils/: images.py  readability.py  retry.py
tests/: conftest.py  test_config.py  test_epub_output.py  test_gemtext_output.py  test_hackernews.py  test_html_output.py  test_images.py  test_kaginews.py  test_main.py  test_markdown_output.py  test_readability.py  test_rss.py  test_sleepscreen_output.py
tests/fixtures/: hn_algolia_items.json  hn_comments.json  hn_stories.json  hn_top_stories.json  kagi_batches.json  kagi_categories.json  kagi_stories_tech.json  kagi_stories_world.json  sample_article.html
